--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500&display=swap');
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,26 +7,15 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#msg {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  animation-name: txtDrop;
+  animation-duration: 20ms;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes txtDrop {
+  0% {top:100px}
+  100% {top: 0px}
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -37,6 +28,3 @@
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
-}
