--- a/client/src/components/multipleChoice.css
+++ b/client/src/components/multipleChoice.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500&display=swap');
+
 .multiple {
     margin: 20px;
-    align-items: center;
+    font-family: 'Plus Jakarta Sans', sans-serif;
   }
   
   @media (max-width: 768px) {
